--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies": {
         "axios": "^1.7.7",
-        "react-native": "0.75.3"
+        "react-native": "0.75.3",
+        "react-native-elements": "^3.4.3"
     }
 }
