--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "undefined": "@expo/vector-icons/FontAwesome"
+    "undefined": "@expo/vector-icons/FontAwesome",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
